fix: phone dark mode load

--- a/src/index.css
+++ b/src/index.css
@@ -2,21 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 300,
-  'GRAD' 0,
-  'opsz' 24;
+@media (hover: hover) and (pointer: fine) {
+  body, * {
+    cursor: none !important;
+  }
 }
 
 @layer base {
   body {
     @apply bg-background text-on-surface;
-    cursor: none !important;
-  }
-  * {
-    cursor: none !important;
   }
 }
 
